@@ -1,3 +1,10 @@
+2008-06-01  Thomas Wood  <thos@gnome.org>
+
+	* capplet-util.c:
+	* capplet-util.h:
+
+	Remove some redundant and unused code
+
 2008-05-24  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
